[package]
name = "do_you_still_want_it"
version = "0.1.0"
authors = ["jaretscrews"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
