[package]
name = "do_you_still_want_it"
version = "0.1.0"
authors = ["jaretscrews"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.0"
chrono = "0.4.19"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
